fe/hearth-489 scroll top on flag click, animation improved, flag hides on small screen fix

--- a/app/app/styles/_navigation.scss
+++ b/app/app/styles/_navigation.scss
@@ -17,15 +17,15 @@ $topBarImageSize: 1.8em;
 		font-weight: bold !important;
 		white-space: nowrap;
 		font-size: 1.2rem;
-		
+
 		.avatar{
-			margin-right: .5rem; 
+			margin-right: .5rem;
 			vertical-align: top;
 		}
 		a{
 			display: block;
 			white-space: nowrap;
-			
+
 			.ellipsed-username{
 				width: calc(100% - 60px);
 				overflow: hidden;
@@ -68,8 +68,8 @@ $topBarImageSize: 1.8em;
 .exit-off-canvas {
 	box-shadow: -4px 0 4px rgba(0, 0, 0, 0.3), 4px 0 4px rgba(0, 0, 0, 0.5);
 }
-.header { 
-	width:100vw; 
+.header {
+	width:100vw;
 	box-shadow: 0 2px 2px rgba(black, 0.3);
 	min-height: 72px;
 	background-color: $colorOrange;
@@ -274,21 +274,21 @@ $topBarImageSize: 1.8em;
 		max-width:$webWidth;
 
 		.dropdown-container a{
-			
+
 		}
 
 		section.bar-columns {
 			padding:0;
 
 			&.logo-column {
-				float:left; 
-				width:20%; 
-				margin-top:5px; 
+				float:left;
+				width:20%;
+				margin-top:5px;
 				margin-left:5px;
 			}
 			&.searchbox-column {
-				float:left; 
-				width:28%; 
+				float:left;
+				width:28%;
 				position:relative;
 
 				.search-input-submit-icon {
@@ -300,7 +300,7 @@ $topBarImageSize: 1.8em;
 				}
 			}
 			&.icons-column {
-				float:right; 
+				float:right;
 				width:50%;
 				text-align: right;
 				padding-right:15px;
@@ -320,9 +320,12 @@ $topBarImageSize: 1.8em;
 					color: lighten(color(1), 25%);
 					transition: color 1s, text-shadow 2s;
 				}
-				& a{
+				.avatar-image{
+					transition: opacity 1s;
+					box-shadow: 0 0 0px 2px lighten(color(1), 25%);
+				}
+				&>*{
 					display: inline-block;
-					/*color: lighten(color(1), 25%);*/
 					text-align: center;
 					label {
 						color: lighten(color(1), 25%);
@@ -334,27 +337,16 @@ $topBarImageSize: 1.8em;
 						left: 4px;
 						right: 4px;
 					}
-					.img {
-						overflow: hidden;
-						transition: opacity 1s;
-						border: 2px solid lighten(color(1), 25%);
-						img {
-							border-radius: 50%;
-						}
-					}
 					&.active,
 					&:hover {
 						color: lighten(color(1), 50%) !important;
-						.fa {
-							color: lighten(color(1), 50%) !important;
-							text-shadow: 0 0 5px white;
-						}
+
 						label {
 							color: lighten(color(1), 50%);
 						}
-						.img {
+						.avatar-image{
 							opacity: 1;
-							box-shadow: 0 0 5px white;
+							box-shadow: 0 0 0px 2px lighten(color(1), 25%), 0 0 5px white;
 						}
 					}
 				}
@@ -447,14 +439,19 @@ $topBarImageSize: 1.8em;
 			margin-right: 5px;
 		}
 		.user-switch-item {
-			padding-top: 6px;
-			padding-bottom: 3px;
+			padding-top: 7px;
+			padding-bottom: 6px;
 		}
-		.avatar {
-			margin-right: 5px;
-		}
+
 		.user-switch-item {
 			margin-left: 10px;
+		}
+	}
+
+	.user-switch-item {
+		.avatar {
+			margin-right: 5px;
+			vertical-align: middle;
 		}
 	}
 }
@@ -472,7 +469,7 @@ $topBarImageSize: 1.8em;
 /* @kamil - temporary workaround against breaking of navigation on screens smaller than 370px */
 @media only screen and (max-width: 370px){
 	#language-bar-mobile{
-		display: none
+		display: none !important;
 	}
 }
 /* /kamil */
